--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Simple CI Pipeline
+name: Run Python Script
 
 on:
   push:
@@ -6,14 +6,17 @@ on:
       - main
 
 jobs:
-  build:
+  run-mypython:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run hello script
-        run: |
-          echo "Running CI Pipeline"
-          cat file1.txt
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Run Python file
+        run: python demo.py
